Group Work actions by parent node
Lots of TODOs. Including:

- adding a node while moving children into it

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,6 +20,11 @@ div.ck-details li.add input {
 	margin: 2px;
 }
 
+a.ck-group {
+	color: black;
+	text-decoration: underline;
+}
+
 a.ck-title {
 	color: black;
 }
