WIP: test merging
Note: fixes bug in init code where we create a node linking to a context
before the context, but fix it by the time we merge. The new code
detects this.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -985,3 +985,14 @@ ul.ck-mode-selector li.active:hover a {
 html {
 	overflow-y: scroll;
 }
+
+div.ck-conflicts {
+	background: #f88;
+	color: white;
+	padding: 0.3rem;
+}
+
+div.ck-details div.ck-conflicts ul {
+	margin-left: 0;
+	padding-left: 1.1rem;
+}
